--- a/program.html
+++ b/program.html
@@ -90,7 +90,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
 
   <tr>
     <td rowspan="8"><b>10:00-10:30</b></td>
-    <td colspan="2" rowspan="8">Coffee break and poster session</td>
+    <td colspan="2" rowspan="8">Coffee break and poster session
    <ul>
     <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
     <li><a href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
@@ -99,7 +99,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <li><a href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
     <li><a href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
     <li><a href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
-   </ul>
+   </ul></td>
   </tr>	
 	
   <tr>
@@ -121,12 +121,12 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
 	
   <tr>
     <td rowspan="4"><b>13:30-14:00</b></td>
-    <td colspan="2" rowspan="4">Contribution Talks</td>
+    <td colspan="2" rowspan="4">Contribution Talks
 	  <ul>
 		  <li><a href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></li>
 		  <li><a href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></li>
 		  <li><a href="2024/submission_7.pdf" target="_blank">Learning Interactive Viewpoint Planning for Foresighted Object Discovery Considering Human Preferences</a></li>
-	  </ul>
+	  </ul></td>
   </tr>
 
   <tr>
@@ -143,7 +143,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
 
   <tr>
     <td rowspan="8"><b>15:30-16:00</b></td>
-    <td colspan="2" rowspan="8">Coffee break and poster session</td>
+    <td colspan="2" rowspan="8">Coffee break and poster session
    <ul>
     <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
     <li><a href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
@@ -152,7 +152,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <li><a href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
     <li><a href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
     <li><a href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
-   </ul>
+   </ul></td>
   </tr>
 
   <tr>
