--- a/program.html
+++ b/program.html
@@ -92,15 +92,15 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <td rowspan="8"><b>10:00-10:30</b></td>
     <td colspan="2" rowspan="8">Coffee break and poster session
    <ul>
-    <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
-    <li><a href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
-    <li><a href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></li>
-    <li><a href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></li>
-    <li><a href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
-    <li><a href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
-    <li><a href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
+    <li><a class="a_link" href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
+    <li><a class="a_link" href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
+    <li><a class="a_link" href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></li>
+    <li><a class="a_link" href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></li>
+    <li><a class="a_link" href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
+    <li><a class="a_link" href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
+    <li><a class="a_link" href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
    </ul></td>
-  </tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>	
+  </tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
 	
   <tr>
     <td><b>10:30-11:15</b></td>
@@ -157,12 +157,12 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
 
   <tr>
     <td><b>16:00-16:45</td>
-    <td>Panel Discussion</td>
+    <td colspan="2">Panel Discussion</td>
   </tr>
 
   <tr>
     <td><b>16:45-17:00</b></td>
-    <td>Farewell and conclusions</td>
+    <td colspan="2">Farewell and conclusions</td>
   </tr>
 
 </table>
